--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Books</h1>
 
+<% @books.each do |book| %>
+
 <table>
   <thead>
     <tr>
@@ -9,41 +11,20 @@
   </thead>
   <tbody>
     <tr>
-      <td>リーダブルコード</td>
-      <td>より良いコードを書くためのシンプルで実践的なテクニック</td>
-      <td>Show</td>
-      <td>Edit</td>
-      <td>Destroy</td>
+      <td><%= book.title %></td>
+      <td><%= book.body %></td>
+      <td><%= link_to "Show",book_path(book.id) %></td>
+      <td><%= link_to "Edit",edit_book_path(book.id) %></td>
+      <td><%= link_to "Destroy",book_path(book.id),method: :delete %></td>
     </tr>
-    <tr>
-      <td>トラブル知らずのシステム設計</td>
-      <td>システム設計の要点や図解で説明してくれます</td>
-    </tr>
-    <tr>
-      <td>たのしいRuby</td>
-      <td>Rubyの入門におすすめです</td>
-    </tr>
-    <tr>
-      <td>入門Git</td>
-      <td>gitについての基本操作から内部構造まで解説してくれます</td>
-    </tr>
-    <tr>
-      <td>アルゴリズム図鑑</td>
-      <td>アルゴリズムについてカラーイラストでしっかり解説してくれます</td>
-    </tr>
-    <tr>
-      <td>達人プログラマー</td>
-      <td>プログラマ入門者は必読！</td>
-    </tr>
-    <tr>
-      <td>データベース実践入門	</td>
-      <td>効率的なSQL文を教えてくれます</td>
-    </tr>
+
   </tbody>
 </table>
 
+<% end %>
+
 <h2>New Book</h2>
-<%= form_with model:@list do |f| %>
+<%= form_with model: @book do |f| %>
   <h4>Title</h4>
   <%= f.text_field :title %>
 
