--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,9 @@
 <p>
+  <%= flash[:notice] %>
+</p>
+
+
+<p>
   <strong>Title :</strong>
   <%= @book.title %>
 </p>
@@ -10,4 +15,4 @@
 
 <%= link_to "Edit", edit_book_path(@book.id) %>
 |
-<%= link_to "Back" , books_path %>
+<%= link_to "Back" , :back %>
